@startuml Minimum State Machine

[*] --> STANDBY
STANDBY : eEnter / reset_machine(m), timer = 0;
STANDBY : eTick [timer % 20 = 0] / led_toggle(); 
STANDBY : eTick [timer>=600] / send_msg(EMPTY), timer = 0;
STANDBY : eExit / led_off();
STANDBY : eSW1 / erase_log();
STANDBY --> CHECK_CALIBRATION : eSW0 /

[*] -> RECALIBRATE : [If state loaded from EEPROM on boot was DISPENSE_PILL]\n / Recalibrate the spinner.
RECALIBRATE : eEnter / re_calibrate();
RECALIBRATE : eEnter / recall_position();
RECALIBRATE : eTick /
RECALIBRATE : eExit /
RECALIBRATE --> STANDBY : eEnter [calibrated = false] / send_msg(RECAL_FAIL);
RECALIBRATE --> DISPENSE_PILL : eTick /


note " - struct Machine, jossa pill_count, \n sun muut yleiset tiedot stateille. \n - Olkoon 1 tick aluksi 50ms.\n - send_msg() on viestin lähetys LoRa verkkoon\n - EEPROM Tallennus tapahtuu aina kun tila vaihtuu" as N1
note left of STANDBY : When the dispenser is started \n it waits for a button to be pressed \n and blinks an LED while waiting.

CHECK_CALIBRATION : eEnter / calibrate();
CHECK_CALIBRATION : eTick / 
CHECK_CALIBRATION : eExit /
CHECK_CALIBRATION --> STANDBY : eTick [calibrated = false] / send_msg(CALIB_FAIL);
CHECK_CALIBRATION --> CALIBRATED : eTick [calibrated = true] /

note left of CHECK_CALIBRATION : When the button is pressed the dispenser \n is calibrated by turning the wheel \n at least one full turn and then stopping \n the wheel so that the compartment with \n the sensor opening is aligned with the drop tube.

CALIBRATED : eEnter / led_on(); send_msg(CALIBRATED);
CALIBRATED : eTick /
CALIBRATED : eExit / led_off();
CALIBRATED --> DISPENSE_WAIT : eSW0 / send_msg(DISP_START),\n write_log(DISP_START)

note left of CALIBRATED : After calibration the program keeps \n the LED on until user presses another button.

DISPENSE_WAIT : eEnter / make_timeout_stamp(); 
DISPENSE_WAIT : eEnter [RETRY TWICE!] / send_msg(STATUS);
DISPENSE_WAIT : eTick / 
DISPENSE_WAIT : eExit / 
DISPENSE_WAIT --> DISPENSE_PILL : eTick [time_reached(TIMEOUT)] /
DISPENSE_WAIT --> STANDBY : eEnter [turn_count >= 7] / send_msg(EMPTY);

note left of DISPENSE_WAIT : Then it dispenses pills every \n 30 seconds starting from the button press.
note right of DISPENSE_WAIT : When all pills have been dispensed \n (wheel turned 7 times) \n the program starts over.

DISPENSE_PILL : eEnter / timer = 0, dispense();
DISPENSE_PILL : eEnter / ++turn_count;
DISPENSE_PILL : eTick / ++timer;
DISPENSE_PILL : eExit /
DISPENSE_PILL --> DISPENSE_OK : ePiezo / ++pill_count;
DISPENSE_PILL --> DISPENSE_FAIL : eTick [timer >= 4] /

DISPENSE_OK : eEnter / send_msg(DISP_OK);
DISPENSE_OK : eTick /
DISPENSE_OK : eExit / write_log(DISP_OK);
DISPENSE_OK --> DISPENSE_WAIT : eTick /

note left of DISPENSE_PILL : When the wheel is turned, \n the piezo sensor is used to detect \n if a pill was dispensed or not.

DISPENSE_FAIL : eEnter / timer = 0; send_msg(DISP_FAIL);
DISPENSE_FAIL : eTick / ++timer;
DISPENSE_FAIL : eTick [timer % 20 = 0] / led_toggle();
DISPENSE_FAIL : eExit / led_off();
DISPENSE_FAIL : eExit / write_log(DISP_FAIL);
DISPENSE_FAIL --> DISPENSE_WAIT : eTick [timer >= 200] /

note left of DISPENSE_FAIL : If no pill was detected (200ms) the LED blinks 5 times.

@enduml
